--- a/app/assets/stylesheets/partials/_mobilemenu.scss
+++ b/app/assets/stylesheets/partials/_mobilemenu.scss
@@ -41,7 +41,7 @@
 			width: 100%; /* Firefox fix */
 		}
 		a {
-			font-family: "Roboto Condensed" !important;
+			font-family: "Roboto Bold" !important;
 		}
 	}
 	.navbar {
